fix(Home): fit logo and pic to visual alignment

--- a/src/pages/Index.scss
+++ b/src/pages/Index.scss
@@ -29,6 +29,8 @@
 
     font-size: 16vw;
     font-weight: bold;
+    // make up for visual height
+    padding-bottom: 0.2em;
   }
 
   .impression-pic {
